--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-.carousel {
-    height: 300px;
+*{
+    background: #353B41;
 }
+
+
+#myCarousel {
+    height: 60%;
+    width: 100%;
+}
+
+.carouselImage{
+   height: 100%;
+   width: 100%;
+}
+
