--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #112c38;
+    background:white;
+}
+nav
+{
+    padding: 5px;
+    font-size: 18px;
+    font-family: sans-serif;
+    color:#112c38;
+    text-transform: uppercase; 
 }
 ul
 {
@@ -28,7 +36,7 @@ ul li a
     padding: 5px;
     font-size: 18px;
     font-family: sans-serif;
-    color: #fff;
+    color:#112c38;
     text-transform: uppercase;
     transition: 0.5s;
 }
@@ -52,7 +60,7 @@ ul li a:before
     left: 0;
     width: 100%;
     height: 100%;
-    background: #ff497c;
+    background:lightblue;
     transition: transform 0.5s;
     transform-origin: right;
     transform: scaleX(0);
