--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 body{
     margin: 0;
     padding: 0;
-    align-items: center;
+    /* align-items: center; */
     height: 100vh;
     background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
     position: relative;
     background-attachment: fixed;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -13,7 +14,7 @@ body{
 nav{
     padding: 5px;
     font-size: 18px;
-    font-family: Lato;
+    font-family: Arial, Helvetica, sans-serif;
     color:#4e5355;
     text-transform: uppercase; 
     opacity: 0.3; 
@@ -33,12 +34,14 @@ ul{
     margin: 0;
     padding: 0;
     display: flex;
+    text-decoration: none;
 }
 
 ul li{
     list-style: none;
     margin: 0 20px;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 ul li a{
@@ -48,7 +51,7 @@ ul li a{
     padding: 5px;
     font-size: 22px;
     letter-spacing: 10px;
-    font-family: Lato;
+    font-family: Arial, Helvetica, sans-serif;
     color:#76c3e4;
     text-transform: uppercase;
     transition: 0.5s;
@@ -58,12 +61,14 @@ ul:hover li a{
     transform: scale(1.5);
     opacity: 0.2;
     filter: blur(5px);
+    text-decoration: none;
 }
 
 ul li a:hover{
     transform: scale(2);
     opacity: 0.7;
     filter: blur(0);
+    text-decoration: none;
 }
 
 ul li a:before{
@@ -78,20 +83,46 @@ ul li a:before{
     transform-origin: right;
     transform: scaleX(0);
     z-index: -1;
+    text-decoration: none;
 }
 
 ul li a:hover:before{
     transition: transform 0.5s;
     transform-origin: left;
     transform: scaleX(1);
+    text-decoration: none;
 }
 
-#aboutMe{
-    height:300px;
+#carousel{
+    background:#4e5355;
 }
+
 
 .carousel-inner > .item >img{
     min-height : 300px;
     max-height : 300px;
-    width : 100%;
-  }
+    position: relative;
+    
+}
+
+.carousel-caption{
+    /* cutout text */
+    background: white;
+    color: black;
+    font-size: 8vw;
+    font-weight: bold;
+    margin: 0 auto;
+    padding: 5px;
+    width: 65%;
+    text-align: center;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    mix-blend-mode: screen;
+    opacity: 0.8;
+}
+
+
