--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,6 +102,8 @@ ul li a:hover:before{
     min-height : 300px;
     max-height : 300px;
     position: relative;
+    background-size: cover;
+    background-image: "";
     
 }
 
@@ -109,20 +111,60 @@ ul li a:hover:before{
     /* cutout text */
     background: white;
     color: black;
-    font-size: 8vw;
+    font-size: 6vw;
     font-weight: bold;
     margin: 0 auto;
-    padding: 5px;
-    width: 65%;
+    padding: 10px;
+    width: 80%;
     text-align: center;
     position: absolute;
-    top: 55%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%,-50%);
     font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     mix-blend-mode: screen;
     opacity: 0.8;
 }
 
+.middy{
+    /* position: relative; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 
+}
+
+.flip{
+    cursor: pointer;
+    width: 340px;
+    height: 480px;
+
+}
+
+.front, .back{
+    width: 90%;
+    /* height: 50%; */
+    overflow: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    transition: transform .6s linear;
+}
+.front{
+    transform: perspective(600px) rotateY(0deg);
+}
+.back{
+    background: #f1f1f1;
+    transform: perspective(600px) rotateY(180deg);
+}
+.back-content{
+    color: #2c3e50;
+    text-align: center;
+    width: 100%;
+}
+.flip:hover > .front{
+    transform: perspective(600px) rotateY(-180deg); 
+}
+.flip:hover > .back{
+    transform: perspective(600px) rotateY(0deg);
+}
