--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: inherit;
+    scroll-behavior: smooth;
 }
 body{
     margin: 0;
@@ -216,7 +217,7 @@ nav{
     color: white;
     height: 100px;
     width: 100px;
-    font-size: 5rem;
+    font-size: 4rem;
 }
 
 
@@ -224,4 +225,16 @@ nav{
     color:#76c3e4;
 }
 
-
+#topButton {
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    cursor: pointer; 
+    padding: 15px; 
+    font-size: 35px; 
+}
+  
+#topButton:hover {
+    color: #76c3e4;
+}
