--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ nav{
     opacity: 0.3; 
 }
 
-.MainNav{
+.mainNav{
     margin: 0;
     padding: 0;
     display: flex;
@@ -44,7 +44,7 @@ nav{
 #navBar{
     margin: 0;
     padding: 0;
-    /* display: flex; */
+    display: flex;
     text-align: center;
     text-decoration: none;
 }
@@ -104,39 +104,13 @@ nav{
     transform: scaleX(1);
     text-decoration: none;
 }
-
-#carousel{
-    background:#4e5355;
-}
-
-
-.carousel-inner > .item >img{
-    min-height : 300px;
-    max-height : 300px;
-    position: relative;
-    background-size: cover;
-    background-image: "";
-    
-}
-
-.carousel-caption{
-    /* cutout text */
-    background: white;
-    color: black;
-    font-size: 8vw;
-    font-weight: bold;
-    margin: 0 auto;
-    padding: 10px;
-    width: 80%;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    font-family: Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-    mix-blend-mode: screen;
-    opacity: 0.8;
+#aboutMe{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150vh;
 }
 
 .middy{
