--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,51 @@
 body{
     margin: 0;
     padding: 0;
-    /* align-items: center; */
-    height: 100vh;
     background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
-    position: relative;
     background-attachment: fixed;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
+}
+
+.side{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+}
+
+.side a{
+    background: #82ccdd;
+    color: white;
+    font-size: 22px;
+    display: block;
+    width: 130px;
+    padding: 12px;
+    text-decoration: none;
+    margin: 8px;
+    color: white;
+    border-radius: 6px;
+    margin-left: -100px;
+    transition: 0.6s all;
+}
+
+.side a:hover{
+    margin-left: 0;
+}
+
+#Title {
+   position: absolute;
+   top: 20%;
+   left: 20%;
+}
+
+#Title .information{
+    text-align: center;
+    margin-top: 25%;
+}
+
+#Title img{
+    max-height: 125vh;
+    max-width: 50vh;
+
 }
