--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,28 @@ ul{
 
 ul li{
     list-style: none;
+    padding: 0px 10px;
+}
+
+ul li:before{
+    content: attr(data-text);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 6em;
+    font-weight: 700;
+    pointer-events: none;
+    opacity: 0;
+    letter-spacing: 20px;
+    transition: 0.5s;
+    white-space: nowrap;
+}
+
+ul li:hover:before{
+    opacity: 0.05;
+    letter-spacing: 0px;
 }
 
 ul li a{
@@ -61,7 +83,13 @@ ul li a:before{
     left: 0;
     width: 80px;
     height: 100%;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.8), transparent);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.5), transparent);
     transform: skewX(35deg);
     transition: 0s;
+}
+
+ul li a:hover:before{
+    left: calc(100% + 100px);
+    transition: 0.5s;
+    transition-delay: 0.2s;
 }
