--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,9 @@ navbar{
 header{
     opacity: 0.8;
     z-index: 10;
+    display: none;
+    position: fixed;
+    width: 100%;
 }
 header nav span{
     pointer-events: none;
@@ -108,5 +111,6 @@ header nav span{
 
 #AboutMe{
     color: black;
+    min-height: 800px;
 }
 
