--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,21 @@ header nav span{
     min-height: 800px;
 }
 
+.icons{
+    display: flex;
+    font-size: 55px;
+    padding: 10px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    align-content: center;
+    justify-content: center;
+}
+
+.icons:hover{
+    color: #2196f3;
+    font-size: 70px;
+    transition: 0.4s;
+}
 /* footer */
 
 footer{
@@ -201,3 +216,4 @@ footer ul li a:hover{
     text-decoration: none;
     color: #2196f3;
 }
+
