--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,10 +164,64 @@ header nav span{
 
 
 /* Projects */
-#Projects{
-    color: black;
-    min-height: 800px;
+.projectBox{
+    position: relative;
+    /* width: 1100px; */
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 30px;
 }
+
+.projectBox .slideCard{
+    position: relative;
+    max-width: 500px;
+    height: 400px;
+    background: #fff;
+    margin: 30px 10px;
+    padding: 20px 15px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 5px 20px rgba (0,0,0,0.5);
+    transition: 0.3s ease-in-out;
+
+}
+
+.projectBox .slideCard .imageBox{
+    position: relative;
+    width: 360px;
+    height: 360px;
+    top: -60px;
+    left: 20px;
+    box-shadow: 0 5px 20px rgba (0,0,0,0.2);
+}
+
+.projectBox .slideCard .imageBox img{
+    max-width: 100%;
+    border-radius: 4px;
+}
+
+.projectBox .slideCard .content{
+    position: relative;
+    margin-top: -140px;
+    padding: 10px 15px;
+    text-align: center;
+    color: #111;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.3s ease-in-out;
+}
+
+.projectBox .slideCard:hover .content{
+    visibility: visible;
+    opacity: 1;
+    margin-top: -40px;
+    transition-delay: 0.3s;
+}
+
+
 
 /* Skills */
 #Skills{
